[package]
name = "bitcoin-consensus"
description = "Rust bindings to libbitcoinconsensus"
repository = "https://github.com/jbg/bitcoin-consensus"
readme = "README.md"
license = "Apache-2.0"
version = "0.2.1"
authors = ["Jasper Bryant-Greene <jbg@rf.net.nz>"]
build = "build.rs"

[dependencies]
bitflags = "0.9"
clippy = {version = "0.0", optional = true}

[dev-dependencies]
hex = "0.2"

[build-dependencies]
num_cpus = "1.4"

[features]
default = []
