[package]
name = "bitcoin-consensus"
description = "Rust bindings to libbitcoinconsensus"
repository = "https://github.com/jbg/bitcoin-consensus"
documentation = "https://docs.rs/bitcoin-consensus/"
readme = "README.md"
license = "Apache-2.0"
version = "0.2.3"
authors = ["Jasper Bryant-Greene <jbg@rf.net.nz>"]
build = "build.rs"

[dependencies]
bitflags = "1.0"
clippy = {version = "0.0", optional = true}

[dev-dependencies]
hex = "0.3"

[build-dependencies]
num_cpus = "1.8"

[features]
default = []
