[package]
name = "bitcoin-consensus"
description = "Rust bindings to libbitcoinconsensus"
repository = "https://github.com/jbg/bitcoin-consensus"
documentation = "https://docs.rs/bitcoin-consensus/"
readme = "README.md"
license = "Apache-2.0"
version = "0.3.0+0.18.0"
authors = ["Jasper Bryant-Greene <jbg@rf.net.nz>"]
build = "build.rs"
edition = "2018"

[dependencies]
bitflags = "1.1.0"

[dev-dependencies]
hex = "0.3.2"

[build-dependencies]
num_cpus = "1.10.1"
